# shopping-list-sync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: .env.example  categories.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/systemd/: shopping-list-sync.service
docs/: contributing.md
src/shopping_list_sync/: __init__.py  __main__.py  config.py  logger.py  organizer.py  state.py  sync.py
tests/: __init__.py  test_config.py
